traces/bug_616.txt
src/medit/mlists.c:958: error: DEAD_STORE
  The value written to &cy (type float) is never used.
Showing all 1 steps of the trace


src/medit/mlists.c:958:13: Write of unused value
956.               
957.               cx = (p0->c[0] + p2->c[0] + p3->c[0]) / 3.0;
958.               cy = (p0->c[1] + p2->c[1] + p3->c[1]) / 3.0;
                   ^
959.               cz = ps1->bb;
960.   
